[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
  "extension-helpers",
  "numpy>=1.25",
  "cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "gmepack"
description = "Galactic Mass Estimator: Fit stan models to observations of kinematics of tracers inside a potential. Can draw and generate mock observations by sampling from the distribution function of the system,."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "A. Slizewski", email = "a.slizewski@mail.utoronto.ca" },
]
dependencies = ["astropy",
  "pandas", 
  "numpy", 
  "seaborn",
  "scipy",
  "matplotlib",
  "cmdstanpy",
  "arviz"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["df_sampling*"]
exclude = ["df_sampling._dev*"]

[tool.setuptools_scm]
version_file = "df_sampling/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "df_sampling",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"
